--- a/BlazorApp1/Pages/Home.razor
+++ b/BlazorApp1/Pages/Home.razor
@@ -2,18 +2,78 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-<p> Текущая дата: @CurrentDate</p>
-<p> Текущая дата: @CurrentTime</p>
+<section id="hero">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>Привет,<br>путешественик!</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet soluta veniam voluptate aliquam deleniti labore quod quis illum, sapiente nam nesciunt magni voluptatibus voluptatem incidunt placeat consequuntur quaerat voluptatum expedita!</p>
+                <button type="button" class="btn btn-dark btn-lg">Начать!</button>
+            </div>
+            <div class="col">
+                <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="...">
+            </div>
+        </div>
+        <div class="row cards">
+            <div class="col-md-4 d-flex justify-content-center">
+                <div class="card">
+                    <div class="card-body">
+                        <!-- here is where they add the ICON -->
+                        <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
+                        <h5 class="card-title">SQL Server</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center">
+                <div class="card">
+                    <div class="card-body">
+                        <!-- here is where they add the ICON -->
+                        <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
+                        <h5 class="card-title">Web API</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center">
+                <div class="card">
+                    <div class="card-body">
+                        <!-- here is where they add the ICON -->
+                        <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
+                        <h5 class="card-title">Blazor WASM</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-
-@code{
-    string CurrentDate;
-    string CurrentTime;
-    protected override async Task OnInitializedAsync(){
-        var date = DateTime.Now;
-        CurrentDate = date.ToShortDateString();
-        CurrentTime = date.ToShortTimeString();
-
-    }
-}
+<section id="about-us">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col">
+                <!-- another image can be inserted here -->
+                <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="img-fluid" />
+            </div>
+            <div class="col">
+                <h1>Кратко о проекте</h1>
+                <p>"Проект "Вокруг света за кредит" предлагает уникальную возможность для любителей путешествий исследовать мир. Мы объединяем предложения по турам в различных городах и странах без учета финансов. Для настоящих ценителей само путешествие важнее его стоимости.</p>
+                <p>
+                    Наш сайт позволяет вам выбрать идеальные туры, чтобы вы могли наслаждаться незабываемыми впечатлениями. Путешествуйте по местам своей мечты, будь то Париж, Токио или пляжи Бали, и воплощайте свои желания в жизнь, не думая о накоплениях, зная, что всегда есть способ осуществить ваше приключение!
+                </p>
+                <button type="button" class="btn btn-dark btn-lg">Подробнее</button>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="contact">
+    <div class="container">
+        <div class="row align-items-center projects">
+            <div class="col">
+                <h1>Я люблю путешествовать!</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quod aliquam corporis tempore nostrum. Animi rem quisquam deleniti qui ad ipsa quod! Animi corrupti, ex blanditiis dolor error nulla consectetur.</p>
+            </div>
+        </div>
+    </div>
+</section>
