--- a/BlazorApp1/Pages/Home.razor
+++ b/BlazorApp1/Pages/Home.razor
@@ -20,8 +20,8 @@
                     <div class="card-body">
                         <!-- here is where they add the ICON -->
                         <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
-                        <h5 class="card-title">SQL Server</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Агенства</h5>
+                        <p class="card-text">Надежные туристические агентства, которые готовы предложить вам лучшие условия и безопасные путешествия. Доверьте организацию своего отдыха профессионалам!</p>
                     </div>
                 </div>
             </div>
@@ -30,8 +30,8 @@
                     <div class="card-body">
                         <!-- here is where they add the ICON -->
                         <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
-                        <h5 class="card-title">Web API</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Гиды</h5>
+                        <p class="card-text">Лучшие гиды будут вашими личными проводниками по лучшим местам мира. Они знают все секреты, интересные факты и помогут вам открыть душу города. Путешествуйте с опытными специалистами и получайте незабываемые эмоции!</p>
                     </div>
                 </div>
             </div>
@@ -40,8 +40,8 @@
                     <div class="card-body">
                         <!-- here is where they add the ICON -->
                         <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
-                        <h5 class="card-title">Blazor WASM</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Туры</h5>
+                        <p class="card-text">Выбирайте из множества уникальных туров – от культурных экскурсий до активных приключений на природе. Каждый тур продуман до мелочей, чтобы вам было комфортно и интересно. Откройте для себя новые горизонты с нами и создайте незабываемые воспоминания!</p>
                     </div>
                 </div>
             </div>
