--- a/BlazorApp1/Pages/Home.razor
+++ b/BlazorApp1/Pages/Home.razor
@@ -7,11 +7,11 @@
         <div class="row">
             <div class="col">
                 <h1>Привет,<br>путешественик!</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet soluta veniam voluptate aliquam deleniti labore quod quis illum, sapiente nam nesciunt magni voluptatibus voluptatem incidunt placeat consequuntur quaerat voluptatum expedita!</p>
-                <button type="button" class="btn btn-dark btn-lg">Начать!</button>
+                <p>Добро пожаловать на наш сайт, созданный специально для тех, кто жаждет открытий и приключений! Здесь вы найдете море вдохновения для своих путешествий, интересные маршруты и уникальные возможности для путешествий. Мы стремимся сделать каждое ваше путешествие незабываемым.</p>
+                <button type="button" >Начать!</button>
             </div>
             <div class="col">
-                <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="...">
+                <img src="https://github.com/Fiinee/Apirep/blob/main/img/im.jpg?raw=true" alt="...">
             </div>
         </div>
         <div class="row cards">
@@ -19,7 +19,7 @@
                 <div class="card">
                     <div class="card-body">
                         <!-- here is where they add the ICON -->
-                        <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
+                        <img src="https://github.com/Fiinee/Apirep/blob/main/img/trainimg.jpg?raw=true" alt="..." class="icon">
                         <h5 class="card-title">Агенства</h5>
                         <p class="card-text">Надежные туристические агентства, которые готовы предложить вам лучшие условия и безопасные путешествия. Доверьте организацию своего отдыха профессионалам!</p>
                     </div>
@@ -29,7 +29,7 @@
                 <div class="card">
                     <div class="card-body">
                         <!-- here is where they add the ICON -->
-                        <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
+                        <img src="https://github.com/Fiinee/Apirep/blob/main/img/image.png?raw=true" alt="..." class="icon">
                         <h5 class="card-title">Гиды</h5>
                         <p class="card-text">Лучшие гиды будут вашими личными проводниками по лучшим местам мира. Они знают все секреты, интересные факты и помогут вам открыть душу города. Путешествуйте с опытными специалистами и получайте незабываемые эмоции!</p>
                     </div>
@@ -39,7 +39,7 @@
                 <div class="card">
                     <div class="card-body">
                         <!-- here is where they add the ICON -->
-                        <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
+                        <img src="https://github.com/Fiinee/Apirep/blob/main/img/tourimage.jpg?raw=true" alt="..." class="icon">
                         <h5 class="card-title">Туры</h5>
                         <p class="card-text">Выбирайте из множества уникальных туров – от культурных экскурсий до активных приключений на природе. Каждый тур продуман до мелочей, чтобы вам было комфортно и интересно. Откройте для себя новые горизонты с нами и создайте незабываемые воспоминания!</p>
                     </div>
@@ -54,7 +54,7 @@
         <div class="row align-items-center">
             <div class="col">
                 <!-- another image can be inserted here -->
-                <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="img-fluid" />
+                <img src="https://github.com/Fiinee/Apirep/blob/main/img/aa.jpg?raw=true" alt="..." class="img-fluid" />
             </div>
             <div class="col">
                 <h1>Кратко о проекте</h1>
@@ -62,7 +62,7 @@
                 <p>
                     Наш сайт позволяет вам выбрать идеальные туры, чтобы вы могли наслаждаться незабываемыми впечатлениями. Путешествуйте по местам своей мечты, будь то Париж, Токио или пляжи Бали, и воплощайте свои желания в жизнь, не думая о накоплениях, зная, что всегда есть способ осуществить ваше приключение!
                 </p>
-                <button type="button" class="btn btn-dark btn-lg">Подробнее</button>
+                <button type="button">Подробнее</button>
             </div>
         </div>
     </div>
@@ -72,7 +72,7 @@
         <div class="row align-items-center projects">
             <div class="col">
                 <h1>Я люблю путешествовать!</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quod aliquam corporis tempore nostrum. Animi rem quisquam deleniti qui ad ipsa quod! Animi corrupti, ex blanditiis dolor error nulla consectetur.</p>
+                <p>=D</p>
             </div>
         </div>
     </div>
