--- a/BlazorApp1/Pages/Home.razor
+++ b/BlazorApp1/Pages/Home.razor
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>Привет,<br>путешественикккк!</h1>
+                <h1>Привет,<br>путешественик!</h1>
                 <p>Добро пожаловать на наш сайт, созданный специально для тех, кто жаждет открытий и приключений! Здесь вы найдете море вдохновения для своих путешествий, интересные маршруты и уникальные возможности для путешествий. Мы стремимся сделать каждое ваше путешествие незабываемым.</p>
                 <button type="button" >Начать!</button>
             </div>
